--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "umi": "^2.2.8",
     "umi-plugin-react": "^1.2.3"
+  },
+  "dependencies": {
+    "axios": "^0.18.0"
   }
 }
