增加 MySQL 数据库连接

--- a/back-end/.vscode/launch.json
+++ b/back-end/.vscode/launch.json
@@ -4,7 +4,7 @@
     "name": "Launch Egg",
     "type": "node",
     "request": "launch",
-    "cwd": "${workspaceRoot}/back-end",
+    "cwd": "${workspaceRoot}",
     "runtimeExecutable": "npm",
     "windows": {
       "runtimeExecutable": "npm.cmd"
