--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "umi-plugin-react": "^1.2.3"
   },
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "lodash": "^4.17.11"
   }
 }
